--- a/public/index.html
+++ b/public/index.html
@@ -1,81 +1,43 @@
 <!DOCTYPE html>
 <html lang="ZH">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Autchan</title>
+    <meta charset="utf-8" />
+    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <title>后台管理系统</title>
     <style>
-      /*
- * CSS样式表重置初始化样式，PC端
- */   html,body,#app{
-        width: 100%;
-        height: 100%;
-      }
-      body,p,div,ul,li,form,input,td,tr,th,div{
-        margin: 0;
-        padding: 0;
-      }
-      body{
-        position: relative;
-      }
-      ul,li{
-        list-style: none;
-      }
-      img{
-        border: none;
-        /* vertical-align: top; */
-        display: block;
-      }
-      a{
-        text-decoration: none;
-        color: #002be5;
-      }
-      a:hover{
-        text-decoration: none;
-      }
-      a img{
-        border: 0;
-      }
-      em{
-        color: #e50000;
-        font-style: normal;
-      }
-      button{
-        cursor: pointer; /*鼠标光标的类型*/
-      }
-      input,textarea{
-        outline: none;
-        appearance: none;
-      }
-      textarea{
-        resize: none;
-        overflow: auto;
-      }
-      table{
-        border-collapse: collapse;
-      }
-      em{
-        font-style: normal;
-      }
-
     </style>
-      <script>
-        var _hmt = _hmt || [];
-        (function() {
-          var hm = document.createElement("script");
-          hm.src = "https://hm.baidu.com/hm.js?469b8e7d98f12c75e6be0b547061efea";
-          var s = document.getElementsByTagName("script")[0]; 
-          s.parentNode.insertBefore(hm, s);
-        })();
-        </script>  
+    <style>body,#app{width:100vw;height:100vh;margin:0;padding:0;background-color:#222}#firstLoading svg{width:0;height:0}#firstLoading{position:relative;width:200px;height:200px;top:50%;left:50%;transform:translate(-50%,-50%);filter:url(#gooey)}#firstLoading span{position:absolute;top:0;left:0;width:100%;height:100%;display:block;animation:animate 5s ease-in-out infinite;animation-delay:calc(0.2s * var(--i))}.firstTitle{color:#86c5ff;margin:0;font-size:30px;letter-spacing:2px;top:50%;left:50%;transform:translate(-50%,-50%);position:absolute}#firstLoading span::before{content:"";position:absolute;top:0;left:calc(50% - 20px);width:40px;height:40px;border-radius:50%;background:linear-gradient(#d1f5ff,#1683ff);box-shadow:0 0 30px #1683ff}@keyframes animate{0%{transform:rotate(0deg)}50%,100%{transform:rotate(360deg)}}</style>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+        properly without JavaScript enabled. Please enable it to
+        continue.</strong
+      >
     </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <div id="app">
+      <p class="firstTitle">加载中</p>
+      <div id="firstLoading">
+        <span style="--i: 1"></span>
+        <span style="--i: 2"></span>
+        <span style="--i: 3"></span>
+        <span style="--i: 4"></span>
+        <span style="--i: 5"></span>
+        <span style="--i: 6"></span>
+        <span style="--i: 7"></span>
+        <svg>
+          <filter id="gooey">
+            <feGaussianBlur in="SourceGraphic" stdDeviation="10"></feGaussianBlur>
+            <feColorMatrix
+              values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 20 -10"
+            ></feColorMatrix>
+          </filter>
+        </svg>
+      </div>
+      
+    </div>
   </body>
 </html>
